--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A dashboard with enhanced features for using YouTube playlists",
   "main": "index.html",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js rs"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "express": "^4.16.2"
   },
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "nodemon": "^1.17.1"
   }
 }
