--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start-app": "nodemon server.js",
-    "watch-styles": "sass app/scss:app/css --watch",
+    "watch-styles": "sass src/scss:src/css --watch",
     "start": "npm run watch-styles | npm run start-app"
   },
   "repository": {
